# grpc-gateway/docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /
 definitions:
+  main.userServiceV1GetAllResponseDto:
+    properties:
+      code:
+        type: integer
+      message:
+        type: string
+      payload:
+        $ref: '#/definitions/user_service.V1GetAllResponse'
+    type: object
   main.userServiceV1LoginResponseDto:
     properties:
       code:
@@ -21,6 +30,15 @@ definitions:
         type: string
       status:
         type: string
+    type: object
+  user_service.V1GetAllRequest:
+    type: object
+  user_service.V1GetAllResponse:
+    properties:
+      users:
+        items:
+          $ref: '#/definitions/user_service.User'
+        type: array
     type: object
   user_service.V1LoginRequest:
     properties:
@@ -47,7 +65,29 @@ info:
   title: gRPC Gateway
   version: "1.0"
 paths:
-  /api/v1/user-service/v1-login:
+  /api/v1/user-service/all:
+    get:
+      description: V1GetAll
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/user_service.V1GetAllRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.userServiceV1GetAllResponseDto'
+      security:
+      - BearerAuth: []
+      summary: V1GetAll
+      tags:
+      - user_service
+  /api/v1/user-service/login:
     post:
       description: V1Login
       parameters:
