# grpc-gateway/router_user_service.go
@@ -1,13 +1,18 @@
 // This file generated automatically by gRPC gateway generator
-// Generated at: 2024-04-05 16:15:24
+// Generated at: 2024-04-05 19:02:48
 
 package main
 
 import "github.com/gofiber/fiber/v2"
 
 func (r *router) userServiceRouter(v fiber.Router) {
+	v.Get(
+		"/all",
+		AuthMiddleware,
+		r.userServiceHandler.V1GetAll,
+	)
 	v.Post(
-		"/v1-login",
+		"/login",
 		r.userServiceHandler.V1Login,
 	)
 }
