# pkg/protos/protogen/user-service/request.pb.go
@@ -75,6 +75,44 @@ func (x *V1LoginRequest) GetPassword() string {
 	return ""
 }
 
+type V1GetAllRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *V1GetAllRequest) Reset() {
+	*x = V1GetAllRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_user_service_request_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *V1GetAllRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*V1GetAllRequest) ProtoMessage() {}
+
+func (x *V1GetAllRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_user_service_request_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use V1GetAllRequest.ProtoReflect.Descriptor instead.
+func (*V1GetAllRequest) Descriptor() ([]byte, []int) {
+	return file_proto_user_service_request_proto_rawDescGZIP(), []int{1}
+}
+
 var File_proto_user_service_request_proto protoreflect.FileDescriptor
 
 var file_proto_user_service_request_proto_rawDesc = []byte{
@@ -84,12 +122,13 @@ var file_proto_user_service_request_proto_rawDesc = []byte{
 	0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x4e,
 	0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x4e, 0x61, 0x6d, 0x65, 0x12,
 	0x1a, 0x0a, 0x08, 0x50, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x18, 0x03, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x08, 0x50, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x42, 0x3f, 0x5a, 0x3d, 0x67,
-	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x65, 0x73, 0x70, 0x69, 0x74, 0x6d,
-	0x61, 0x6e, 0x2f, 0x67, 0x77, 0x73, 0x2d, 0x63, 0x68, 0x61, 0x74, 0x2f, 0x70, 0x6b, 0x67, 0x2f,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x73, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x67, 0x65, 0x6e, 0x2f,
-	0x75, 0x73, 0x65, 0x72, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x09, 0x52, 0x08, 0x50, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x22, 0x11, 0x0a, 0x0f, 0x56,
+	0x31, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x42, 0x3f,
+	0x5a, 0x3d, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x65, 0x73, 0x70,
+	0x69, 0x74, 0x6d, 0x61, 0x6e, 0x2f, 0x67, 0x77, 0x73, 0x2d, 0x63, 0x68, 0x61, 0x74, 0x2f, 0x70,
+	0x6b, 0x67, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x73, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x67,
+	0x65, 0x6e, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -104,9 +143,10 @@ func file_proto_user_service_request_proto_rawDescGZIP() []byte {
 	return file_proto_user_service_request_proto_rawDescData
 }
 
-var file_proto_user_service_request_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_proto_user_service_request_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_proto_user_service_request_proto_goTypes = []interface{}{
-	(*V1LoginRequest)(nil), // 0: proto.V1LoginRequest
+	(*V1LoginRequest)(nil),  // 0: proto.V1LoginRequest
+	(*V1GetAllRequest)(nil), // 1: proto.V1GetAllRequest
 }
 var file_proto_user_service_request_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
@@ -134,6 +174,18 @@ func file_proto_user_service_request_proto_init() {
 				return nil
 			}
 		}
+		file_proto_user_service_request_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*V1GetAllRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -141,7 +193,7 @@ func file_proto_user_service_request_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_proto_user_service_request_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   1,
+			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
