# pkg/protos/protogen/user-service/response.pb.go
@@ -67,6 +67,53 @@ func (x *V1LoginResponse) GetUser() *User {
 	return nil
 }
 
+type V1GetAllResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Users []*User `protobuf:"bytes,1,rep,name=users,proto3" json:"users,omitempty"`
+}
+
+func (x *V1GetAllResponse) Reset() {
+	*x = V1GetAllResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_user_service_response_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *V1GetAllResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*V1GetAllResponse) ProtoMessage() {}
+
+func (x *V1GetAllResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_user_service_response_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use V1GetAllResponse.ProtoReflect.Descriptor instead.
+func (*V1GetAllResponse) Descriptor() ([]byte, []int) {
+	return file_proto_user_service_response_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *V1GetAllResponse) GetUsers() []*User {
+	if x != nil {
+		return x.Users
+	}
+	return nil
+}
+
 var File_proto_user_service_response_proto protoreflect.FileDescriptor
 
 var file_proto_user_service_response_proto_rawDesc = []byte{
@@ -77,12 +124,15 @@ var file_proto_user_service_response_proto_rawDesc = []byte{
 	0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x32, 0x0a, 0x0f, 0x56,
 	0x31, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x1f,
 	0x0a, 0x04, 0x75, 0x73, 0x65, 0x72, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0b, 0x2e, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x04, 0x75, 0x73, 0x65, 0x72, 0x42,
-	0x3f, 0x5a, 0x3d, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x65, 0x73,
-	0x70, 0x69, 0x74, 0x6d, 0x61, 0x6e, 0x2f, 0x67, 0x77, 0x73, 0x2d, 0x63, 0x68, 0x61, 0x74, 0x2f,
-	0x70, 0x6b, 0x67, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x73, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x67, 0x65, 0x6e, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
-	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x04, 0x75, 0x73, 0x65, 0x72, 0x22,
+	0x35, 0x0a, 0x10, 0x56, 0x31, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x12, 0x21, 0x0a, 0x05, 0x75, 0x73, 0x65, 0x72, 0x73, 0x18, 0x01, 0x20, 0x03,
+	0x28, 0x0b, 0x32, 0x0b, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x52,
+	0x05, 0x75, 0x73, 0x65, 0x72, 0x73, 0x42, 0x3f, 0x5a, 0x3d, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
+	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x65, 0x73, 0x70, 0x69, 0x74, 0x6d, 0x61, 0x6e, 0x2f, 0x67, 0x77,
+	0x73, 0x2d, 0x63, 0x68, 0x61, 0x74, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x73, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x67, 0x65, 0x6e, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2d,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -97,18 +147,20 @@ func file_proto_user_service_response_proto_rawDescGZIP() []byte {
 	return file_proto_user_service_response_proto_rawDescData
 }
 
-var file_proto_user_service_response_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_proto_user_service_response_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_proto_user_service_response_proto_goTypes = []interface{}{
-	(*V1LoginResponse)(nil), // 0: proto.V1LoginResponse
-	(*User)(nil),            // 1: proto.User
+	(*V1LoginResponse)(nil),  // 0: proto.V1LoginResponse
+	(*V1GetAllResponse)(nil), // 1: proto.V1GetAllResponse
+	(*User)(nil),             // 2: proto.User
 }
 var file_proto_user_service_response_proto_depIdxs = []int32{
-	1, // 0: proto.V1LoginResponse.user:type_name -> proto.User
-	1, // [1:1] is the sub-list for method output_type
-	1, // [1:1] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	2, // 0: proto.V1LoginResponse.user:type_name -> proto.User
+	2, // 1: proto.V1GetAllResponse.users:type_name -> proto.User
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_proto_user_service_response_proto_init() }
@@ -130,6 +182,18 @@ func file_proto_user_service_response_proto_init() {
 				return nil
 			}
 		}
+		file_proto_user_service_response_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*V1GetAllResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -137,7 +201,7 @@ func file_proto_user_service_response_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_proto_user_service_response_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   1,
+			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
