# user-service/internal/adapter/handler/gRPC/handler_user.go
@@ -27,3 +27,23 @@ func (h Handler) V1Login(ctx context.Context, req *pb.V1LoginRequest) (*pb.V1Log
 	}
 	return &resp, nil
 }
+
+func (h Handler) V1GetAll(ctx context.Context, req *pb.V1GetAllRequest) (*pb.V1GetAllResponse, error) {
+	var resp pb.V1GetAllResponse
+	var users []*pb.User
+	result, err := h.userService.GetAll(ctx)
+	if err != nil {
+		return nil, err
+	}
+	for _, r := range result {
+		users = append(users, &pb.User{
+			Id:     int32(r.ID),
+			Name:   r.Name,
+			Avatar: r.Avatar,
+			Status: r.Password,
+		})
+	}
+	resp.Users = users
+
+	return &resp, nil
+}
